--- a/style.css
+++ b/style.css
@@ -87,4 +87,9 @@ img{
   #lezioni .row > .left, #lezioni .row > .right {
     width: 100%;
   }
+  #steps .row > .left,
+  #steps .row > .central,
+  #steps .row > .right {
+    width: 100%;
+  }
 }
