--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ img{
   clear:both;
 }
 @media screen and (max-width:420px) {
+  body {background: lightgrey;
+  }
   #lezione {
     text-align: left;
     width: 420px;
