--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ img{
 .clear {
   clear:both;
 }
+@media screen and (min-width:421px) and (max-width:780px) {
+  body {background-color: red;
+  }
+  #steps .row > .left,
+  #steps .row > .central,
+  #steps .row > .right {
+    width: 50%;
+  }
+}
 @media screen and (max-width:420px) {
   body {background: lightgrey;
   }
