--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ img{
 @media screen and (min-width:421px) and (max-width:780px) {
   body {background-color: red;
   }
+  .container.grey {
+  background-color: red;}
   #steps .row > .left,
   #steps .row > .central,
   #steps .row > .right {
